third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/inline-parity/generics.exp

Diagnostics:
error: captured variable `sum` cannot be modified inside of a lambda
   ┌─ tests/checking-lang-v2.2/lambda/inline-parity/generics.move:16:30
   │
16 │         foreach<u64>(&v, |e| sum = sum + *e);
   │                              ^^^
